<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NextEditor</string>
    <string name="untitled">Untitled</string>
    <string name="settings">Settings</string>
    <string name="file">File</string>
    <string name="new_file">New File</string>
    <string name="open_file">Open File</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="save_as">Save As</string>
    <string name="close">Close</string>
    <string name="read_only">Read Only</string>
    <string name="select_all">Select All</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="new_folder">New Folder</string>
    <string name="ok">OK</string>
    <string name="created_successfully">Created successfully</string>
    <string name="failed_to_create">Failed to create</string>
    <string name="cancel">Cancel</string>
    <string name="saved_successfully">Saved successfully</string>
    <string name="is_overwrite">The file already exists, whether to overwrite the file</string>
    <string name="file_opened">File opened</string>
    <string name="is_save">The document has not been saved, save and close</string>
    <string name="warning">Warning</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="text_category">Text</string>
    <string name="size_title">Font Size</string>
    <string name="style_title">Font style</string>
    <string name="show_category">show</string>
    <string name="night_title">Night mode</string>
</resources>