<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/text_category">

        <EditTextPreference
            app:key="size"
            app:title="@string/size_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="style"
            app:entries="@array/style_entries"
            app:entryValues="@array/style_values"
            app:key="style"
            app:title="@string/style_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/show_category">

        <SwitchPreferenceCompat
            app:key="night"
            app:title="@string/night_title" />

    </PreferenceCategory>

</PreferenceScreen>